# configs/swagger-output.json
@@ -126,6 +126,16 @@
       "post": {
         "operationId": "PdfIngestionController_askWithPdfData",
         "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ValidateQuestion"
+              }
+            }
+          }
+        },
         "responses": {
           "201": {
             "description": ""
@@ -228,6 +238,11 @@
         "type": "http"
       }
     },
-    "schemas": {}
+    "schemas": {
+      "ValidateQuestion": {
+        "type": "object",
+        "properties": {}
+      }
+    }
   }
 }
